--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "global": "^4.4.0",
+    "googleapis": "^66.0.0",
     "mongodb": "^3.6.3",
     "mysql": "^2.18.1",
     "node-fetch": "^2.6.1"
