--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "googleapis": "^66.0.0",
     "mongodb": "^3.6.3",
     "mysql": "^2.18.1",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "react": "^17.0.1"
   }
 }
