--- a/Back/package.json
+++ b/Back/package.json
@@ -32,6 +32,7 @@
     "mysql": "^2.18.1",
     "node-fetch": "^2.6.1",
     "react": "^17.0.1",
+    "react-google-login": "^5.2.2",
     "xhr2": "^0.2.0"
   }
 }
