--- a/Front/package.json
+++ b/Front/package.json
@@ -14,6 +14,7 @@
     "emotion": "^11.0.0",
     "firebase": "^8.2.1",
     "react": "^17.0.1",
+    "react-cookie": "^4.0.3",
     "react-dom": "^17.0.1",
     "react-google-login": "^5.2.2",
     "react-hover-image": "^2.0.1",
@@ -24,6 +25,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "styled-components": "^5.2.1",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
