--- a/Back/package.json
+++ b/Back/package.json
@@ -31,6 +31,7 @@
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "node-fetch": "^2.6.1",
+    "nodemon": "^2.0.7",
     "react": "^17.0.1",
     "react-google-login": "^5.2.2",
     "xhr2": "^0.2.0"
