--- a/Front/package.json
+++ b/Front/package.json
@@ -24,6 +24,7 @@
     "react-native-screens": "^2.16.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-toggle": "^4.1.1",
     "styled-components": "^5.2.1",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^0.2.4"
