--- a/Front/package.json
+++ b/Front/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
@@ -14,6 +15,7 @@
     "emotion": "^11.0.0",
     "firebase": "^8.2.1",
     "react": "^17.0.1",
+    "react-accessible-accordion": "^3.3.3",
     "react-cookie": "^4.0.3",
     "react-dom": "^17.0.1",
     "react-google-login": "^5.2.2",
@@ -24,6 +26,7 @@
     "react-native-screens": "^2.16.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-show-more-text": "^1.4.6",
     "react-toggle": "^4.1.1",
     "styled-components": "^5.2.1",
     "universal-cookie": "^4.0.4",
