--- a/Front/package.json
+++ b/Front/package.json
@@ -14,12 +14,14 @@
     "babel": "^6.23.0",
     "emotion": "^11.0.0",
     "firebase": "^8.2.1",
+    "leaflet": "^1.7.1",
     "react": "^17.0.1",
     "react-accessible-accordion": "^3.3.3",
     "react-cookie": "^4.0.3",
     "react-dom": "^17.0.1",
     "react-google-login": "^5.2.2",
     "react-hover-image": "^2.0.1",
+    "react-leaflet": "^3.0.5",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
